Added style sheet and updated webpage

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>INFO2180 Lab 1</title>
+
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
     <header>
@@ -13,9 +16,9 @@
     </header>
     <main>
         <h2>Nathan J Gordon</h2>
-        <p>I currently attend the University of the West Indies (Mona) where I am an Electronics and Computer Science major.</p>
-        <p>For the entirety of my high school education, I attended the Wolmer's Trust High School for Boys #AgeQuodAgis #BigUpHeroesCircle</p>
-        <p>I grew up in Spanish Town, JA, with my two parents. For some reason, many persons are shocked to hear this.  XD</p>
+        <p>I currently attend the University of the West Indies (Mona) where I am an Electronics and Computer Science major. For the entirety of my high school education, I attended the Wolmer's Trust High School for Boys #AgeQuodAgis #BigUpHeroesCircle</p>
+        <p>I grew up in Spanish Town, JA, with my two parents. For some reason, many persons are shocked to hear this. As an individual who is fascinated by the intersection of hardware and software, web development is particuarly interesting for me because of</p>
+        <p>how web technologies are built to facilitate interactive and user-friendly platforms, connecting people and information in real time. I find it rewarding to blend design and functionality all while staying at the forefront of new web standards and frameworks.</p>
     </main>
     <footer>
         <p>Copyright &copy; 2024 Nathan J. Gordon</p>
