--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <p>I currently attend the University of the West Indies (Mona) where I am an Electronics and Computer Science major. For the entirety of my high school education, I attended the Wolmer's Trust High School for Boys #AgeQuodAgis #BigUpHeroesCircle</p>
         <p>I grew up in Spanish Town, JA, with my two parents. For some reason, many persons are shocked to hear this. As an individual who is fascinated by the intersection of hardware and software, web development is particuarly interesting for me because of</p>
         <p>how web technologies are built to facilitate interactive and user-friendly platforms, connecting people and information in real time. I find it rewarding to blend design and functionality all while staying at the forefront of new web standards and frameworks.</p>
+        <div><img src="venice.jpg"></div>
     </main>
     <footer>
         <p>Copyright &copy; 2024 Nathan J. Gordon</p>
